main.css
/* ... */
@media only screen and (max-width: 650px){
  section#visualization{
    top: 0px;
  }
  section#visualization>div{
    min-height: 300px;
  }
  #visHistory{
    padding-right: 10px;
  }
  #visResult{
    padding-left: 10px;
  }
}
@media only screen and (max-width: 320px){
  section#calculator #display{
    width: 286px;
    height: 60px;
  }
  section#calculator #display #history{
    height: 22px;
    font-size: 16px;
  }
  section#calculator #display #result{
    height: 36px;
    font-size: 24px;
    padding-top: 0px;
  }
  section#calculator button{
    width: 64px;
  }
  section#calculator button#clear{
    width: 136px;
  }
}

/* Browser-specific fixes below...*/

/*Fixing units for Firefox*/
@-moz-document url-prefix(){
    .collection>div{
      width: 2vw;
      margin-bottom: 0.5vw;
    }
    .circle::after,.square::after{
      height: 2vw;
    }
    footer div:last-child::after{
      content: "Note: This tool works best in Chrome. Animations may not show correctly on your your browser.";
      color: red;
      font-weight: bold;
      border: solid 2px red;
      border-radius: 4px;
      padding: 2px;
      background-color: #ffedf0;
    }
}
/* IE Edge 12+ CSS */
@supports (-ms-ime-align:auto){
  .collection>div{
    width: 2vw;
    margin-bottom: 0.5vw;
  }
  .circle::after,.square::after{
    height: 2vw;
  }
  footer div:last-child::after{
    content: "Note: This tool works best in Chrome. Animations may not show correctly on your browser.";
    color: red;
    font-weight: bold;
    border: solid 2px red;
    border-radius: 4px;
    padding: 2px;
    background-color: #ffedf0;
  }
}
/* IE10+ CSS */
@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  footer div:last-child::after{
    content: "Note: This tool works best in Chrome. Animations may not show correctly on your browser.";
    color: red;
    font-weight: bold;
    border: solid 2px red;
    border-radius: 4px;
    padding: 2px;
    background-color: #ffedf0;
  }
}

